2008-02-06  Werner Koch  <wk@g10code.com>

	* mimeparser.c (mime_decrypt): New arg IS_RFC822.
	* message.cpp (message_decrypt): Add code to see whether to use
	the new arg.

2008-02-01  Werner Koch  <wk@g10code.com>

	* mimeparser.c (ciphertext_handler, ciphermessage_cb)
	(ciphermessage_t2body): New.
	(mime_decrypt): Use an rfc822 parser to pass the message to the
	engine.

	* mapihelp.cpp (mapi_get_attach_as_stream): Add arg R_ATTACH.
	(mapi_set_attach_hidden): New.

2008-01-31  Werner Koch  <wk@g10code.com>

	* message.cpp (message_verify): Check that the body attachment is
	available before shortcutting the verification.
	* user-events.cpp (OnSelectionChange): Change SMIME message
	class.
	* mapihelp.cpp (mapi_change_message_class): Add arg
	SYNC_OVERRIDE. Changed all callers to pass false.
	(mapi_test_sig_status): Take care of sent messages.
	(mapi_get_gpgol_body_attachment): Change args to allow use as
	testing fucntion too.  Adjusted caller.

2008-01-29  Werner Koch  <wk@g10code.com>

	* mimemaker.c (do_mime_sign): Set CTE for SMIME.
	(delete_all_attachments): Remove extra semicolon accidently
	inserted with revision 916.

2008-01-18  Marcus Brinkmann  <marcus@g10code.de>

	* mimeparser.c (mime_verify): New variable sig_len, and pass it on
	to engine_verify_start.
	* engine.h (engine_verify_start): Add new argument sig_len.
	* engine.c (engine_verify_start): Add new argument sig_len and
	pass it on to op_assuan_verify and op_gpgme_verify.
	* engine-assuan.h (op_asssuan_verify): Add new argument sig_len.
	* engine-gpgme.c (op_gpgme_verify): New argument sig_len and use
	it instead of string length of signature.
	* engine-assuan.c (op_assuan_verify): Likewise.

2008-01-11  Werner Koch  <wk@g10code.com>

	* mimemaker.c (finalize_message): Add args PROTOCOL and ENCRYPT
	and use them to set the override message class.
	(mime_sign, mime_encrypt, mime_sign_encrypt): Pass this info via
	the new args.
	(do_mime_sign): Set micalg to sha1 for CMS.
