@@ -1,3 +1,8 @@
+2008-02-07  Werner Koch  <wk@g10code.com>
+
+	* message.cpp (message_wipe_body_cruft): Delete only encrypted
+	messages.
+
 2008-02-06  Werner Koch  <wk@g10code.com>
 
 	* mimeparser.c (mime_decrypt): New arg IS_RFC822.
